Incremental roll in, this is the core version that has been deployed to the ALA today. Please note, there are database migrations required, please see:
http://code.google.com/p/ala-citizenscience/wiki/DatabaseMigration

For more details.