@@ -29,7 +29,7 @@ public abstract class AbstractRecordFormField extends AbstractFormField {
      */
     @Override
     public int compareTo(FormField other) {
-        return new Integer(this.getWeight()).compareTo(other.getWeight());
+        return Integer.valueOf(this.getWeight()).compareTo(other.getWeight());
     }
 
     /**
